fix: add z-index 100 for contact form

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -840,7 +840,7 @@ section {
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: 100;
   background: rgba(187, 187, 187, 0.589);
 
   display: flex;
@@ -1259,6 +1259,12 @@ section {
     .burger {
       display: block!important;
     }
+  }
+
+  .modal-close {
+    z-index: 11!important;
+    top: 5rem!important;
+    
   }
 
   .hero__caption {
